--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 
 body {
   width: 100vw;
-  background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
-    url("assets/bgimage.jpg");
+  background-color: #f6f6f6;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -23,13 +22,15 @@ body {
   width: 100%;
   height: 100%;
   padding: 24px 24px 0 24px;
-  max-width: 1200px;
+  max-width: 1440px;
   margin: auto;
 }
 
-h1 {
-  font-size: 42px;
+h1,
+h2 {
+  font-size: 36px;
   text-align: center;
+  margin-bottom: 32px;
 }
 
 h3 {
@@ -58,9 +59,17 @@ main {
   justify-content: space-evenly;
 }
 
+.panel {
+  width: 50%;
+}
+
+.pult {
+  width: 25%;
+}
+
 .card__container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
   gap: 16px;
   justify-items: center;
   margin-top: 16px;
@@ -70,10 +79,22 @@ main {
   width: 100%;
   height: 164px;
   box-shadow: 0 2px 5px rgb(0 0 0 / 25%);
-  padding: 8px;
+  padding: 16px;
   border-radius: 8px;
   font-size: 18px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.2s;
+  cursor: default;
+}
+
+.card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 2px 8px rgb(0 0 0 / 25%);
+}
+
+.obs {
+  width: 80%;
+  margin-top: 16px;
 }
