--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import "styles/footer.css";
 @import "styles/gallery.css";
+@import "styles/connect.css";
+@import "styles/pult.css";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", "Times New Roman", Times, serif;
+  font-family: "sofia", "Roboto", "Times New Roman", Times, serif;
 }
 
 body {
@@ -21,9 +23,13 @@ body {
 .wrapper {
   width: 100%;
   height: 100%;
-  padding: 24px 24px 0 24px;
+  padding: 24px 24px 8px 24px;
   max-width: 1440px;
   margin: auto;
+}
+
+p {
+  font-size: 20px;
 }
 
 h1,
@@ -81,7 +87,6 @@ main {
   box-shadow: 0 2px 5px rgb(0 0 0 / 25%);
   padding: 16px;
   border-radius: 8px;
-  font-size: 18px;
   display: flex;
   align-items: center;
   justify-content: center;
