--- a/style.css
+++ b/style.css
@@ -2,12 +2,19 @@
 @import "styles/gallery.css";
 @import "styles/connect.css";
 @import "styles/pult.css";
+@import "styles/mode.css";
+@import "styles/header.css";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "sofia", "Roboto", "Times New Roman", Times, serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 body {
@@ -102,4 +109,18 @@ main {
 .obs {
   width: 80%;
   margin-top: 16px;
+}
+
+@media (max-width: 600px) {
+  h1,
+  h2,
+  h3 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 14px;
+  }
+  .card__container {
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  }
 }
