--- a/style.css
+++ b/style.css
@@ -143,7 +143,12 @@ main {
   p {
     font-size: 14px;
   }
+
   .card__container {
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .card {
+    grid-column: 1 / 3;
+    height: 102px;
   }
 }
