--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 @import "styles/pult.css";
 @import "styles/mode.css";
 @import "styles/header.css";
+@import "styles/main.css";
+@import "styles/banner.css";
 
 * {
   margin: 0;
@@ -63,23 +65,9 @@ main {
 
 .section {
   width: 100%;
-  background-color: #fff;
-  border-radius: 16px;
+  /* background-color: #fff; */
+  /* border-radius: 16px; */
   padding: 32px;
-}
-
-.img__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.panel {
-  width: 50%;
-}
-
-.pult {
-  width: 25%;
 }
 
 .card__container {
