--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,13 +1,31 @@
 .gallery {
   display: flex;
-  gap: 8px;
-  justify-content: space-between;
+  gap: 16px;
+  justify-content: center;
   overflow-x: auto;
+  overflow-y: hidden;
   scroll-snap-type: x proximity;
+  --border-radius: 16px;
 }
 
 .img {
-  min-width: 150px;
-  height: 150px;
-  background: #f6f6f6;
+  min-width: 186px;
+  height: 186px;
+  border-radius: var(--border-radius);
+  position: relative;
+}
+
+.img img {
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
+}
+
+.img__text {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 20%;
+  font-size: 24px;
+  color: #fff;
 }
