--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,10 +1,11 @@
 .banner__background {
-  background-color: #0078ff;
+  background-color: #195223;
 }
 
 .banner__container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .banner__features__container {
@@ -20,7 +21,6 @@
   min-width: 250px;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   gap: 16px;
 }
 .banner__feature img {
@@ -30,17 +30,19 @@
 
 .banner__feature h3 {
   text-align: left;
-  font-size: 32px;
+  font-size: 18px;
+}
+
+.banner__feature p {
+  font-size: 14px;
 }
 
 .banner__title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   color: #fff;
 }
 
 .banner__title h3 {
   font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 16px;
 }
