--- a/styles/main.css
+++ b/styles/main.css
@@ -13,25 +13,66 @@
 .main__slide {
   width: 360px;
   height: 64px;
-  text-align: center;
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 25%);
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 8px;
+  padding-left: 8px;
 }
 
-.img__container {
-  margin-top: 16px;
+.main__img__container {
+  margin-top: 80px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
   text-align: center;
 }
 
 .main__img {
-  width: 420px;
-  height: 420px;
+  width: 220px;
+  height: 192px;
+}
+
+#main h1 {
+  text-align: center;
+}
+
+.main__color__button {
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  border: 1px solid #8f8f8f;
+  background-color: #fff;
+  padding: 1px;
+}
+
+.main__color__container {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.main__info__button {
+  height: 55px;
+  background-color: #004390;
+  border-radius: 32px;
+  width: 100%;
+  margin-top: 20px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.product__card p {
+  color: #333;
+  font-weight: bold;
+  margin-top: 24px;
+}
+
+.color {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
 }
