--- a/styles/features.css
+++ b/styles/features.css
@@ -1,3 +1,7 @@
+#features {
+  padding: 0;
+}
+
 .features__container {
   height: 885px;
   padding: 54px 72px;
@@ -37,4 +41,31 @@
 }
 .features__colors__container .color:nth-child(5) {
   background: #67310f;
+}
+
+.features__list {
+  margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+
+.features__list__element {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  max-width: 608px;
+}
+
+.features__list__element div {
+  min-width: 32px;
+  min-height: 32px;
+  width: 32px;
+  height: 32px;
+  background-color: #000;
+  border-radius: 12px;
+}
+.features__list__element p {
+  color: #fff;
+  font-size: 24px;
 }
