--- a/styles/instructions.css
+++ b/styles/instructions.css
@@ -1,4 +1,4 @@
-#instructions {
+.instruction__banner {
   padding: 0;
   padding-top: 24px;
   padding-bottom: 64px;
@@ -19,4 +19,50 @@
   margin-top: 32px;
   width: 128px;
   height: 128px;
+}
+
+.main__instruction {
+  display: flex;
+  flex-direction: column;
+  padding: 64px;
+  margin-left: 72px;
+}
+
+.main__instruction h3 {
+  margin-top: 64px;
+  text-align: left;
+  font-size: 64px;
+  font-weight: 700;
+}
+
+.instruction__title {
+  font-size: 48px;
+  margin-top: 64px;
+  max-width: 800px;
+}
+
+.instruction__title:before {
+  content: "";
+  position: absolute;
+  width: 72px;
+  height: 72px;
+  background-color: #d9d9d9;
+  border-radius: 16px;
+  left: 72px;
+}
+
+.instruction__info {
+  max-width: 800px;
+  font-size: 36px;
+  margin-top: 16px;
+}
+
+.instruction__image__container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.instruction__image__container img {
+  margin-top: 64px;
 }
