--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -198,3 +198,22 @@
 .card__text b {
   font-size: 20px;
 }
+
+@media (max-width: 576px) {
+  .carousel__button {
+    width: 36px;
+    height: 36px;
+  }
+  .card {
+    flex-direction: column-reverse;
+    padding: 16px;
+    height: auto;
+  }
+  .carousel__text__container {
+    width: 100%;
+  }
+
+  .card__title {
+    text-align: center;
+  }
+}
