--- a/styles/pult.css
+++ b/styles/pult.css
@@ -24,10 +24,20 @@
 
 .pult__features__list div {
   display: flex;
+  align-items: center;
   gap: 16px;
 }
 
 .pult__features__list img {
   width: 72px;
   height: 72px;
+}
+
+@media (max-width: 576px) {
+  .pult__container {
+    grid-template-columns: 1fr;
+  }
+  .pult__features__list {
+    gap: 20px;
+  }
 }
